src/objects/Construction_Project_Update__c.object
<CustomObject>
    <fields>
        <fullName>Action_Items__c</fullName>
        <label>Action Items</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CS_Modules__c</fullName>
        <label>CS Modules</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_Order_1_Amount__c</fullName>
        <label>Change Order 1 Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Change_Order_1__c</fullName>
        <label>Change Order 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Contract_Amount__c</fullName>
        <formula>Project__r.Contract_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Project_Photo__c</fullName>
        <label>Current Project Photo</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DAS__c</fullName>
        <label>DAS</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Range__c</fullName>
        <label>Date Range</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electrical_Completion__c</fullName>
        <label>Electrical Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inverters__c</fullName>
        <label>Inverters</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mechanical_Completion__c</fullName>
        <label>Mechanical Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Module_Completion__c</fullName>
        <label>Module Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Modules_Completion__c</fullName>
        <label>Modules Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Contract_Amount__c</fullName>
        <label>Original Contract Amount</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Executive__c</fullName>
        <label>Project Executive</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <label>Project Manager</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Notes__c</fullName>
        <label>Project Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Photos__c</fullName>
        <label>Project Photos</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
        <relationshipLabel>Construction Project Updates</relationshipLabel>
        <relationshipName>Construction_Project_Updates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Racking_Completion__c</fullName>
        <label>Racking Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Racking__c</fullName>
        <label>Racking</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SH_Modules__c</fullName>
        <label>SH Modules</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Information__c</fullName>
        <label>Site Information</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site_Mobilization__c</fullName>
        <label>Site Mobilization</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_1__c</fullName>
        <label>Stage 1</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_2__c</fullName>
        <label>Stage 2</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_3__c</fullName>
        <label>Stage 3</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Switchgear__c</fullName>
        <label>Switchgear</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>System_Analyst__c</fullName>
        <label>System Analyst</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Size_MW_AC__c</fullName>
        <formula>Project__r.Total_System_Size_kW_AC__c / 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Size (MW AC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Size_MW_DC__c</fullName>
        <formula>Project__r.Total_MWDC__c/1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Size (MW DC)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Type__c</fullName>
        <formula>text(  Project__r.System_Type__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>System Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transformer__c</fullName>
        <label>Transformer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Utility__c</fullName>
        <formula>text( Project__r.Utility_and_Load_Zone__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wittness_Test__c</fullName>
        <label>Wittness Test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>health__c</fullName>
        <label>health</label>
        <length>260</length>
        <type>Html</type>
    </fields>
    <label>Construction Project Update</label>
    <nameField>
        <label>Construction Project Update Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Construction Project Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>